
[package]
name = "interpreter"
version = "0.0.9"
authors = ["Eugene <fogaprod@gmail.com>"]
edition = "2018"
description = "Interpreter for the Lox programming language"
readme = "../README.md"
repository = "https://github.com/Fogapod/yaliir"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
phf = { version = "0.8.0", features = ["macros"] }
anyhow = "1.0.40"
exitcode = "1.1.2"
